# Locan

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CITATION.cff  Dockerfile  LICENSE.md  MANIFEST.in  README.md  README.rst  conda-requirements.txt  environment-linux-py3.10_230219.yml  environment-linux-py3.10_230630.yml  environment-linux-py3.10_231005.yml  environment-linux-py3.11.yml  environment-linux-py3.12.yml  environment-ubuntu-py3.10_230928.yml  environment.yml  environment_2021-11-05.yml  environment_211123.yml  environment_220602.yml  environment_dev.yml  environment_surepy_0_5.1.yml  environment_surepy_0_5.yml  environment_v6_py38_2021-03-04.yml  pip-requirements.txt  pyproject.toml  requirements-all-linux-py3.10_230219.txt  requirements-all-linux-py3.10_230630.txt  requirements-all-linux-py3.10_230928.txt  requirements-all-linux-py3.10_231005.txt  requirements-all-linux-py3.11.yml  requirements-all-linux-py3.12.yml  requirements.txt  requirements_2021-11-05.txt  requirements_211123.txt  requirements_220602.txt  requirements_dev.txt  requirements_surepy_0_5.1.txt  (+4 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  CI_black-ruff-mypy.yml  CI_format_lint_typecheck.yml  CI_qt.yml  README.md  Test_OS-matrix_pip_all_qt.yml  Test_OS_matrix_conda.yml  Test_conda.yml  Test_matrix_conda.yml  Test_matrix_pip.yml  Test_matrix_pip_all.yml  Test_matrix_pip_all_original.yml  Test_matrix_pip_all_qt.yml  Test_matrix_pip_py310.yml  Test_matrix_pip_py311.yml  Test_matrix_pip_py3x-dev.yml  Test_pip.yml  Test_pip_coverage.yml  deploy_to_pypi.yml  deploy_to_testpypi.yml  python-package-conda.yml
benchmarks/: README.md  asv.conf.json  asv.conf_conda.json  asv_conf.json  asv_conf_conda.json
benchmarks/benchmarks/: __init__.py  analysis_localization_precision.py  analysis_nearest_neighbor.py  analysis_ripley.py  data_aggregate.py  data_locdata.py  data_locdata_hulls.py  data_locdata_metadata.py  data_register.py  import_locan.py  locan_io.py  simulate_locdata.py  utils.py
docker/: README.md
docker/conda/: Dockerfile
docker/deploy/: Dockerfile
docker/jupyter/: Dockerfile
docker/linux/: Dockerfile
docker/project_interactive/: Dockerfile
docker/project_test/: Dockerfile
docs/: Makefile  aim.rst  background.rst  command_line_interface.rst  conf.py  contributions.rst  datastructures.rst  design.rst  development.rst  directories.rst  docker_readme_link.rst  documentation.rst  index.rst  installation.rst  license.rst  make.bat  metadata.rst  methods.rst  outlook.rst  properties.rst  requirements.txt  requirements_rtd.txt  tutorials.rst  user_interface.rst
docs/_build/: .buildinfo  aim.html  datastructures.html  design.html  development.html  directories.html  documentation.html  genindex.html  glossary.html  index.html  metadata.html  methods.html  name.html  objects.inv  outlook.html  properties.html  py-modindex.html  search.html  searchindex.js
docs/source/: aim.rst  background.rst  colormaps.rst  command_line_interface.rst  datastructures.rst  design.rst  development.rst  docker_readme_link.md  documentation.rst  glossary.rst  installation.rst  introduction.rst  license.rst  metadata.rst  methods.rst  modules.rst  properties.rst  surepy.analysis.localizations_per_frame.rst  surepy.constants.rst  surepy.data.clustering.rst  surepy.data.drift_correction.rst  surepy.data.locdata.rst  surepy.data.rst  surepy.io.io_locdata.rst  surepy.io.rst  surepy.rst  user_interface.rst
docs/tutorials/: notebook_execution_table.md  tutorials.rst
locan/: __init__.py  __init__.pyi  __main__.py  configuration.py  constants.py  datasets.py  dependencies.py  locan_types.py
locan/_future/: __init__.py
locan/analysis/: __init__.py  accumulation_analysis.py  analysis_base.py  analysis_example.py  blinking.py  cbc.py  convex_hull_expectation.py  drift.py  grouped_property_expectation.py  localization_precision.py  localization_property.py  localization_property_2d.py  localization_property_correlations.py  localizations_per_frame.py  metadata_analysis.proto  metadata_analysis_pb2.py  metadata_analysis_pb2.pyi  nearest_neighbor.py  pipeline.py  position_variance_expectation.py  ripley.py  subpixel_bias.py  uncertainty.py
locan/data/: __init__.py  aggregate.py  filter.py  locdata.py  locdata_utils.py  metadata.proto  metadata_pb2.py  metadata_utils.py  region.py  region_utils.py  register.py  rois.py  tracking.py  validation.py
locan/gui/: __init__.py  io.py
locan/io/: __init__.py  io_locdata.py
locan/licences/: README.rst  SCIKIT-LEARN.rst
locan/locan_io/: __init__.py  files.py  utilities.py
locan/render/: __init__.py  render2d.py  render3d.py  transform.py  utilities.py
locan/rois/: roi.py
locan/scripts/: __init__.py  script_check.py  script_draw_roi.py  script_napari.py  script_rois.py  script_show_versions.py  script_test.py  utilities.py
locan/simulation/: __init__.py  simulate_drift.py  simulate_locdata.py
locan/tests/: __init__.py  conftest.py  test_configuration.py  test_constants.py  test_datasets.py  test_dependencies.py  test_globals.py  test_locan_init.py  test_locdata_io.py  test_simulation.py  test_surepy_init.py  test_types.py
locan/tools/: script_make_init.py  script_to_print_all.py
locan/utils/: __init__.py  format.py  miscellaneous.py  statistics.py  system_information.py
locan/visualize/: __init__.py  colormap.py  render.py  transform.py
src/locan/: __init__.py  __init__.pyi  __main__.py  configuration.py  constants.py  datasets.py  dependencies.py  locan_types.py
surepy/: __init__.py  __main__.py  constants.py  datasets.py  utilities.py  version.py
surepy/_future/: __init__.py
surepy/analysis/: Ripley.py  __init__.py  accumulation_analysis.py  analysis.py  analysis_base.py  analysis_example.py  analysis_example_2.py  analysis_tools.py  batch_processing.py  blinking.py  cbc.py  drift.py  (+12 more)
tests/: __init__.py  conftest.py  test_constants.py  test_locan_init.py  test_simulation.py  test_subpackage_imports.py
tools/: script_get_colormap_color_list.py  script_make_init.py  show_test_data.py
(+705 files in other folders)
