[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.4"
    ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "locan"}

[tool.setuptools_scm]
write_to = "locan/_version.py"
fallback_version = "0.14-fallback"

[project]
name = "locan"
description = "Analysis software for single-molecule localization microscopy"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
authors = [
  {name = "Locan Developers"},
]
maintainers = [
  {name = "Sören Doose"}
]
keywords = [
    "fluorescence", "super-resolution", " single-molecule localization microscopy",
    "smlm", "storm", "dstorm", "palm", "paint"
]
classifiers = [
    "Environment :: Console",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]
dependencies = [
    "asdf",
    "tifffile",
    "ruamel.yaml",
    "fast-histogram",
    "boost-histogram",
    "lmfit",
    "protobuf",
    "shapely!=2.0.0,!=2.0.1",
    "networkx",
    "scikit-learn",
    "scikit-image",
    "matplotlib",
    "scipy",
    "pandas",
    "numpy>1.17.0",
    "tqdm",
    "cython",
    "tomli>=1.1.0; python_version<'3.11'",
    "qtpy!=2.3.0",
]

[project.optional-dependencies]
test = ["pytest"]
pytest-qt = ["pytest-qt"]
pyside2 = ["PySide2"]
pyqt5 = ["PyQt5"]
color = ["colorcet"]
track = ["trackpy"]
register = ["open3d!=0.12.0"]
napari = ["napari"]
scatter_density = ["mpl_scatter_density"]
html = ["requests"]
hdf5 = ["h5py"]
hdbscan = ["hdbscan"]
all = [
    "PyQt5",
    "pytest",
    "colorcet",
    "trackpy",
    "locan[register]",
    "napari",
    "mpl_scatter_density",
    "requests",
    "h5py",
    "hdbscan"
]
gpu = ["cupy"]
docs = [
    "sphinx",
    "ipython",
    "myst-nb",
    "sphinx-copybutton",
    "sphinx_rtd_theme",
    "furo",
    "ray",
]
dev = [
    "coverage",
    "build",
    "twine",
    "black",
    "pre-commit",
    "asv",
    "ruff",
]

[project.urls]
homepage = "https://github.com/super-resolution/locan"
documentation = "https://locan.readthedocs.io/"
repository = "https://github.com/super-resolution/locan"
issues = "https://github.com/super-resolution/locan/issues"
changelog = "https://github.com/super-resolution/locan"

[project.scripts]
locan = "locan.__main__:main"


[tool.black]
line_length = 88

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:RoiLegacy.to_yaml is deprecated*:DeprecationWarning",
    "ignore::DeprecationWarning:hdbscan",
]
addopts = "-m 'not gui and not visual and not requires_datasets'"
markers = [
    "gui: marks tests that require user interaction (skipped by default)",
    "visual: marks tests that require visual inspection (skipped by default)",
    """requires_datasets: marks tests that require data in locan_datasets directory \
       (skipped by default)""",
    "qt: marks tests that require QT",
]

[tool.coverage.run]
include = "locan/*"
omit = [
    "locan/tests/*",
    "locan/scripts/*",
    "locan/__main__.py",
    "locan/data/metadata_pb2.py",
    "locan/analysis/metadata_analysis_pb2.py",
    "locan/locan_io/locdata/manifest_pb2.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 88
show-source = false
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "Q",  # flake8-quotes
    "YTT",  # flake8-2020
    "S",  # flake8-bandit
]
# Rules - https://github.com/charliermarsh/ruff#reference:
# E402 module-import-not-at-top-of-file
# E501 line-too-long
# F403 import-star-used
# I001 	unsorted-imports
# B905 `zip()` without an explicit `strict=` parameter - should be used from py310.
ignore = ["E501", "B905"]
# automatically exclude files that are ignored by .gitignore
exclude = [
    ".*",
    "dist",
    "docs",
    "docker",
    "*/*_pb2.py"
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F403", "F405"]
"_version.py" = ["Q000"]
"test_*.py" = ["S101"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.flake8-import-conventions]
[tool.ruff.flake8-import-conventions.aliases]
numpy = "np"
pandas = "pd"
matplotlib = "mpl"
"matplotlib.pyplot" = "plt"
open3d = "o3d"
scipy = "sp"
networkx = "nx"
boost_histogram = "bh"

[tool.ruff.pydocstyle]
convention = "numpy"
