[metadata]
name = surepy
url = https://github.com/super-resolution/surepy
download_url = https://github.com/super-resolution/surepy
https://github.com/super-resolution/Surepy.git
license = BSD 3-Clause
license_file = LICENSE
description = Analysis software for single-molecule localization microscopy
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fluorescence super-resolution single-molecule localization microscopy smlm storm dstorm palm paint
author = Surepy Developers
author_email =
classifiers =
    Environment :: Console
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data = True
setup_requires =
    setuptools_scm
    pytest-runner
install_requires =
    asdf
    tifffile
    ruamel.yaml
    fast-histogram
    hdbscan
    lmfit
    protobuf
    shapely
    networkx
    scikit-learn
    scikit-image
    matplotlib
    scipy
    pandas
    numpy
    numba
    cython
tests_require = pytest

# for explanation of %(extra)s syntax see:
# https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
# this syntax may change in the future
[options.extras_require]
# if changed please update corresponding variables in surepy.constants
color =
    colorcet
track =
    trackpy
register =
    open3d
napari =
    PySide2>=5.12.3,<5.15.0
    napari<0.3.0
scatter_density =
    mpl_scatter_density
dev =
    sphinx
    sphinx_rtd_theme
    ipython
all =
    %(color)s
    %(track)s
    %(register)s
    %(napari)s
    %(scatter_density)s

[options.entry_points]
console_scripts =
    surepy = surepy.__main__:main
    sc_draw_roi_mpl = surepy.scripts.sc_draw_roi_mpl:main

[aliases]
test=pytest
